--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,15 @@ Advent.Of.Code.2019/bin/
 Advent.Of.Code.2019/obj/
 
 .DS_Store
+
+packages/
+
+AdventOfCode.2019.UnitTests/bin/
+
+AdventOfCode.2019.UnitTests/obj/
+
+AdventOfCode.2019.UnitTests/Properties/
+
+AdventOfCode.2019/bin/
+
+AdventOfCode.2019/obj/
