--- a/AdventOfCode.2019.UnitTests/AdventOfCode.2019.UnitTests.csproj
+++ b/AdventOfCode.2019.UnitTests/AdventOfCode.2019.UnitTests.csproj
@@ -51,13 +51,13 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\AdventOfCode.2019.DayOne\AdventOfCode.2019.DayOne.csproj">
-      <Project>{1793a4a0-f449-4316-a76a-73ad5967aaca}</Project>
-      <Name>AdventOfCode.2019.DayOne</Name>
+    <ProjectReference Include="..\AdventOfCode.2019.Day1\AdventOfCode.2019.Day1.csproj">
+      <Project>{659218b1-605a-4a87-8a89-1ef6dbd7c41d}</Project>
+      <Name>AdventOfCode.2019.Day1</Name>
     </ProjectReference>
-    <ProjectReference Include="..\AdventOfCode.2019.DayTwo\AdventOfCode.2019.DayTwo.csproj">
+    <ProjectReference Include="..\AdventOfCode.2019.Day2\AdventOfCode.2019.Day2.csproj">
       <Project>{da91ba56-12d8-4150-972e-2a01146babe0}</Project>
-      <Name>AdventOfCode.2019.DayTwo</Name>
+      <Name>AdventOfCode.2019.Day2</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
